--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
     <script src="Build/UnityLoader.js"></script>
+
     <script>
-      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/intoDeep.json", {onProgress: UnityProgress});
+      var unityInstance = UnityLoader.instantiate("unityContainer", "Build/intoDeep.json", {
+        onProgress: UnityProgress,
+        Module: {
+         onRuntimeInitialized: function() { UnityProgress(unityInstance, "complete") }
+       }
+      });
     </script>
   </head>
   <body>
